tests/rosetta/transpiler/FS/fibonacci-word.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/fibonacci-word.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Fibonacci-word' based on the file name 'fibonacci-word.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/fibonacci-word.fs(36,30): error FS0039: The value, constructor, namespace or type 'Math' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/fibonacci-word.fs(36,23): error FS0008: This runtime coercion or type test from type
    'a    
 to 
    Map<string,obj>    
involves an indeterminate type based on information prior to this program point. Runtime type tests are not allowed on some types. Further type annotations are needed.

/workspace/mochi/tests/rosetta/transpiler/FS/fibonacci-word.fs(36,22): error FS0001: This expression was expected to have type
    float    
but here has type
    obj    

/workspace/mochi/tests/rosetta/transpiler/FS/fibonacci-word.fs(37,29): error FS0039: The value, constructor, namespace or type 'Math' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/fibonacci-word.fs(37,22): error FS0008: This runtime coercion or type test from type
    'a    
 to 
    Map<string,obj>    
involves an indeterminate type based on information prior to this program point. Runtime type tests are not allowed on some types. Further type annotations are needed.

/workspace/mochi/tests/rosetta/transpiler/FS/fibonacci-word.fs(37,21): error FS0001: This expression was expected to have type
    float    
but here has type
    obj    

/workspace/mochi/tests/rosetta/transpiler/FS/fibonacci-word.fs(42,22): error FS0001: This expression was expected to have type
    unit    
but here has type
    float    

/workspace/mochi/tests/rosetta/transpiler/FS/fibonacci-word.fs(52,22): error FS0003: This value is not a function and cannot be applied

/workspace/mochi/tests/rosetta/transpiler/FS/fibonacci-word.fs(61,22): error FS0001: This expression was expected to have type
    unit    
but here has type
    float    

/workspace/mochi/tests/rosetta/transpiler/FS/fibonacci-word.fs(70,22): error FS0001: This expression was expected to have type
    unit    
but here has type
    float    

/workspace/mochi/tests/rosetta/transpiler/FS/fibonacci-word.fs(92,68): error FS0001: The type 'unit' does not support the operator '/'

/workspace/mochi/tests/rosetta/transpiler/FS/fibonacci-word.fs(94,50): error FS0001: The type 'unit' does not support the operator '/'
